MV2: version bump + translation tweak

--- a/extension-manifest-v2/_locales/en/messages.json
+++ b/extension-manifest-v2/_locales/en/messages.json
@@ -1125,7 +1125,7 @@
     "message": "Sign In"
   },
   "panel_stats_pitch_modal_text": {
-    "message": "Become a Contributor to unlock Advanced Tracker Analytics and a further line of Ghostery extras."
+    "message": "Become a Contributor to unlock a line of Ghostery extras."
   },
   "panel_stats_pitch_modal_tooltip": {
     "message": "Erase all statistics history up until this point in time."
