--- a/extension-manifest-v3/src/_locales/ru/messages.json
+++ b/extension-manifest-v3/src/_locales/ru/messages.json
@@ -62,7 +62,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "check_out__a_href__@_0___target___blank__faqs__a__or_drop_us_a_line_at__a_href__mailto___1_____2___a____br___we_ll_be_more_than_happy_to_talk_to_you_": {
-    "message": "Check out <a href=\"$${0}\" target=\"_blank\">FAQs</a> or drop us a line at <a href=\"mailto:$${1}\">$${2}</a>. <br/> We'll be more than happy to talk to you!"
+    "message": "Ознакомьтесь с <a href=\"$${0}\" target=\"_blank\">FAQs</a> или напишите нам <a href=\"mailto:$${1}\">$${2}</a>. <br/> Будем рады пообщаться с вами!"
   },
   "comments": {
     "message": "Комментарии",
@@ -89,7 +89,7 @@
     "message": "Готово"
   },
   "done__go_with_ghosty_": {
-    "message": "Done! Go with Ghosty!"
+    "message": "Готово! Использовать призрака!"
   },
   "email": {
     "message": "Email",
@@ -125,7 +125,7 @@
     "message": "Ghostery блокирует трекеры и защищает вашу конфиденциальность!"
   },
   "ghostery_is_stopping_trackers_in_their_tracks_and_preventing_you_from_being_profiled_and_your_personal_information_sold_to_data_brokers_": {
-    "message": "Ghostery is stopping trackers in their tracks and preventing you from being profiled and your personal information sold to data brokers."
+    "message": "Ghostery блокирует трекеры и предотвращает профилирование и продажу ваших данных брокерам."
   },
   "ghostery_options": {
     "message": "Настройки Ghostery"
@@ -138,10 +138,10 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "i_agree_to_send_non_personal_information_to__a_href__@_0___ghostery_s_whotracks_me__a___and_i_accept_the__a_href____1___ghostery_privacy_policy__a_": {
-    "message": "I agree to send non-personal information to <a href=\"$${0}\">Ghostery’s WhoTracks.Me</a>, and I accept the <a href=\"$${1}\">Ghostery Privacy Policy</a>"
+    "message": "Я соглашаюсь отправлять неличную информацию на <a href=\"$${0}\">Ghostery’s WhoTracks.Me</a> и принимаю <a href=\"$${1}\">Политику конфиденциальности Ghostery</a> Ghostery."
   },
   "it_exists_thanks_to_micro_contributions_of_every_ghostery_user_who_chooses_to_send_non_personal_information_to_whotracks_me__the_input_enables_ghostery_to_provide_real_time_intel_on_trackers_which_in_turn_provides_protection_to_the_entire_ghostery_community_": {
-    "message": "It exists thanks to micro-contributions of every Ghostery user who chooses to send non-personal information to WhoTracks.Me. The input enables Ghostery to provide real-time intel on trackers which in turn provides protection to the entire Ghostery community."
+    "message": "Он существует благодаря микровкладам каждого пользователя Ghostery, отправляющего неперсональную информацию на WhoTracks.Me. Данные позволяют Ghostery оперативно предоставлять информацию о трекерах, что взамен обеспечивает защиту всего сообщества Ghostery."
   },
   "learn_more": {
     "message": "Подробнее"
@@ -160,7 +160,7 @@
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
-    "message": "More information on $${0} methodology in Ghostery’s Manifesto."
+    "message": "Дополнительная информация о методологии $${0} в Декларации Ghostery."
   },
   "never_consent": {
     "message": "Never-Consent"
@@ -181,7 +181,7 @@
     "message": "OK"
   },
   "ok__i_understand": {
-    "message": "Ok, I understand"
+    "message": "Да, я понимаю"
   },
   "on": {
     "message": "Вкл"
@@ -253,16 +253,16 @@
     "message": "Интерфейс пользователя"
   },
   "welcome_to_ghostery": {
-    "message": "Welcome to Ghostery"
+    "message": "Добро пожаловать в Ghostery"
   },
   "what_is_whotracks_me_": {
     "message": "Что такое WhoTracks.Me?"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
-    "message": "WhoTracks.Me, operated by Ghostery, is an integral part of Ghostery’s AI anti-tracking technology. It is a comprehensive global resource on trackers, bringing transparency to web tracking."
+    "message": "WhoTracks.Me, управляемый Ghostery, является неотъемлемой частью технологии Ghostery ИИ, предотвращающей отслеживание. Это наиболее полный глобальный ресурс по трекерам, обеспечивающий прозрачность отслеживания."
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
-    "message": "With Ghostery enabled you instantly browse the web safer, faster and with less annoying ads."
+    "message": "С включенным Ghostery вы мгновенно переходите на более безопасный, быстрый и менее раздражающий просмотр веб-сайтов."
   },
   "yes": {
     "message": "Да"
@@ -271,7 +271,7 @@
     "message": "Вы всегда можете изменить эти настройки в&nbsp;<strong>панели управления Ghostery</strong>."
   },
   "you_can_change_your_mind_anytime_and_enable_ghostery_to_start_tracking_the_trackers_for_you_in_ghostery_panel_": {
-    "message": "You can change your mind anytime and enable Ghostery to start tracking the trackers for you in Ghostery panel."
+    "message": "Вы можете передумать в любое время и разрешить Ghostery начать отслеживать трекеры за вас в панели Ghostery."
   },
   "you_chose_to_skip_enabling_ghostery_": {
     "message": "Вы решили пропустить включение Ghostery!"
